# kingfisher

./: .gitignore  Dockerfile  README.md  clean.sh  dirty.sh  docker-compose-template.sh  docker-compose.yaml  docker-name-map.tmp  flip.py  kingfisher.py  multi.sh  pyproject.toml  spreads.txt  test.py  test.txt  ticker-parse.py  ticker.py
data/: ticker-parse.py  ticker.py  ticker_bid_ask_spread.txt  ticker_spread_over_bid_volume.txt  us_volume_sorted.csv
logs/: BFC-buy_first-2021-04-09-06-52-20  BFC-sell_first-2021-04-09-06-52-20  JOUT-buy_first-2021-04-09-06-52-20  JOUT-sell_first-2021-04-09-06-52-20  OFLX-buy_first-2021-04-09-06-52-20  OFLX-sell_first-2021-04-09-06-52-20  USLM-buy_first-2021-04-09-06-52-20  USLM-sell_first-2021-04-09-06-52-20  WINA-buy_first-2021-04-09-06-52-20  WINA-sell_first-2021-04-09-06-52-20  kingfisher-BFC-buy_first-2021-04-12-08-08-30  kingfisher-BFC-buy_first-2021-04-13-07-00-01  kingfisher-BFC-buy_first-2021-04-13-08-04-46  kingfisher-BFC-sell_first-2021-04-12-08-08-30  kingfisher-BFC-sell_first-2021-04-13-07-00-01  kingfisher-BFC-sell_first-2021-04-13-08-04-46  kingfisher-JOUT-buy_first-2021-04-12-08-08-30  kingfisher-JOUT-buy_first-2021-04-13-07-00-01  kingfisher-JOUT-buy_first-2021-04-13-08-04-46  kingfisher-JOUT-sell_first-2021-04-12-08-08-30  kingfisher-JOUT-sell_first-2021-04-13-07-00-01  kingfisher-JOUT-sell_first-2021-04-13-08-04-46  kingfisher-OFLX-buy_first-2021-04-12-08-08-30  kingfisher-OFLX-buy_first-2021-04-13-07-00-01  kingfisher-OFLX-buy_first-2021-04-13-08-04-46  kingfisher-OFLX-sell_first-2021-04-12-08-08-30  (+14 more)
test/: flip.py  (+5 more)
