[tool.poetry]
name = "buying_gf"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
yahooquery = "^2.2.15"
ib-insync = "^0.9.65"
transitions = "^0.8.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
graphviz = "^0.16"
pygraphviz = "^1.7"
transitions = {version = "^0.8.7", extras = ["diagrams"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
