[tool.poetry]
name = "kingfisher"
version = "0.1.0"
description = ""
authors = ["Luan Truong <luanqtruong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ib-insync = "^0.9.65"
yahooquery = "^2.2.15"
transitions = "^0.8.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
